--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -139,11 +139,11 @@ video {
 #video:after {
   content: '';
   opacity: 0.75;
-  background: #929292; /* Old browsers */
-  background: -moz-linear-gradient(top, #929292 0%, #4096ee 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #929292 0%,#4096ee 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #929292 0%,#4096ee 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#929292', endColorstr='#4096ee',GradientType=0 ); /* IE6-9 */
+  background: #5FA390; /* Old browsers */
+  background: -moz-linear-gradient(top, #5FA390 0%, #476ECC 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #5FA390 0%,#476ECC 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #5FA390 0%,#476ECC 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5FA390', endColorstr='#476ECC',GradientType=0 ); /* IE6-9 */
   position:fixed;
   left:0;
   top:0;
@@ -223,10 +223,10 @@ video {
   flex: 1 0 auto;
 }
 .preloader {
-  background: -moz-linear-gradient(top, #929292 0%, #4096ee 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #929292 0%,#4096ee 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #929292 0%,#4096ee 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#929292', endColorstr='#4096ee',GradientType=0 ); /* IE6-9 */
+  background: -moz-linear-gradient(top, #5FA390 0%, #476ECC 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #5FA390 0%,#476ECC 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #5FA390 0%,#476ECC 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5FA390', endColorstr='#476ECC',GradientType=0 ); /* IE6-9 */
   height: 100%;
   left: 0;
   position: fixed;
