--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -176,7 +176,19 @@ video {
   border:2px solid transparent;
   border-radius: 10px;
 }
-.btn:hover, .btn:focus {
+.btn-modal {
+  background: #fff;
+  color: #222;
+  text-align:center;
+  line-height:38px;
+  padding:0 10px;
+  border-radius: 0px;
+  text-transform:uppercase;
+  font-weight:600;
+  border:2px solid transparent;
+  border-radius: 10px;
+}
+.btn:hover, .btn:focus,.btn-modal:hover, .btn-modal:focus {
   color:#fff;
   border-color:#fff;
   background:none;
@@ -234,6 +246,11 @@ video {
   top: 0;
   z-index: 9999;
   text-align: center;
+}
+.preloader-modal{
+  background: -moz-linear-gradient(top, #5FA390 0%, #476ECC 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #5FA390 0%,#476ECC 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #5FA390 0%,#476ECC 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 .preloader-bounce {
   left: 0;
@@ -671,7 +688,6 @@ a#logo {
   border-radius: 10px;
   padding:4px 22px;
   font-size:14px;
-  margin-bottom: 30px;
 }
 .form-control:focus {
   box-shadow:none;
